# tsumi

./: CREDITS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: map.ldtk  player.trickfilm
assets/characters/: character.trickfilm
assets/dialogue/: aspects.yarn  endings.yarn  main.yarn  others.yarn
assets/map/: big.ldtk  level.ldtk
src/: assets.rs  main.rs
src/aspect/: combiner.rs  icon.rs  mod.rs  name_text.rs  socket.rs
src/audio/: bgm.rs  mod.rs
src/npc/: mod.rs  narrator.rs
src/player/: audio.rs  ima.rs  input.rs  mod.rs  movement.rs  spawn.rs
src/ui/: ending_text.rs  mod.rs  vignette.rs
src/ui/dialogue/: audio.rs  command.rs  mod.rs  option_selection.rs  runner.rs  spawn.rs  test.rs  typewriter.rs  updating.rs
src/ui/screens/: fade_screen.rs  mod.rs  splash_screen.rs
src/utils/: mod.rs
src/world/: mod.rs
src/world/camera/: mod.rs
src/world/map/: bed.rs  collisions.rs  keyboard_hint.rs  mod.rs  tutorial.rs
