[package]
name = "pirate-jam"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
rand = "0.8.5"
rand_xoshiro = "0.6.0"
chrono = "0.4.38"

bevy = "0.12.1"
bevy_asset_loader = { version = "0.19.1", features = ["2d"] }
bevy_rapier2d = "0.24.0"
bevy_kira_audio = "0.18.0"

noisy_bevy = "0.5.0"
bevy_tweening = { version = "0.9.0", features = ["bevy_ui"]}
bevy_particle_systems = "0.11.2"
bevy_trickfilm = { git = "https://github.com/PraxTube/bevy_trickfilm", branch = "main" }
