[package]
name = "pirate-jam"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# https://github.com/rust-lang/cargo/issues/4897
[profile.wasm]
inherits = "release"
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
rand = "0.8.5"
rand_xoshiro = "0.6.0"
chrono = "0.4.38"
strum = "0.26.3"
strum_macros = "0.26.4"

bevy = "0.14.0"
bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
bevy_rapier2d = "0.27.0"
bevy_kira_audio = "0.20.0"

bevy_ecs_ldtk = { git = "https://github.com/MScottMcBee/bevy_ecs_ldtk", branch = "0.14", features = ["atlas"] }
noisy_bevy = "0.7.0"
bevy_tweening = { version = "0.11.0", features = ["bevy_ui"]}
bevy_particle_systems = "0.13.0"
bevy_trickfilm = "0.7.0"
